--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ crispy-bootstrap5==0.7
 Django==4.2.6
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
+Pillow==10.1.0
 soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2023.3
